* 2007-08-06 - marcus.klein@open-xchange.com

 - Added configuration file for generic config jump.

* 2007-08-02 - marcus.klein@open-xchange.com

 - Bugfix #8175: Added -XX:+UseConcMarkSweepGC to memory options.

* 2007-07-23 - marcus.klein@open-xchange.com

  - Bugfix #8083: Changed path to GUI for notification links.

* 2007-07-11 - marcus.klein@open-xchange.com

  - Updated missing values.

* 2007-07-03 - marcus.klein@open-xchange.com

  - Initial version.